fixed spacing of icon

--- a/WebContent/css/pics.css
+++ b/WebContent/css/pics.css
@@ -459,7 +459,7 @@ a.edit2 {
 }
 
 a.filter {
-	padding-left: 17px;
+	padding-left: 24px;
 	margin-left: 5px;
 	background: url('../images/filter.png') no-repeat left center;
 	zoom: 1;
